--- a/WinterRedServer/src/main/resources/application.yml
+++ b/WinterRedServer/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/winter_red?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
     username: root
     password: root
@@ -13,4 +13,4 @@ spring:
 
 mybatis-plus:
   type-aliases-package: org.codeforworld.winterredserver.entity
-  mapper-locations: classpath:/mapper/*Mapper.xml
+  mapper-locations: classpath:/org/codeforworld/winterredserver/mapper/xml/*Mapper.xml
