--- a/WinterRedServer/pom.xml
+++ b/WinterRedServer/pom.xml
@@ -55,6 +55,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.39</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!--热发布jar包-->
