--- a/WinterRedServer/pom.xml
+++ b/WinterRedServer/pom.xml
@@ -55,8 +55,6 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.39</version>
-            <scope>runtime</scope>
         </dependency>
 
         <!--热发布jar包-->
@@ -64,7 +62,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
-            <scope>true</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
