增加 发邮件工具类

--- a/WinterRedServer/pom.xml
+++ b/WinterRedServer/pom.xml
@@ -95,6 +95,13 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
+
+        <!--邮件-->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
     </dependencies>
 
 
