1.切面拦截处理修改人和修改时间。2.处理保存到数据库的时间和系统时间差8小时的bug。

--- a/WinterRedServer/src/main/resources/application.yml
+++ b/WinterRedServer/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.113.113.225:3306/winter_red?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+    url: jdbc:mysql://47.113.113.225:3306/winter_red?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&serverTimezone=Asia/Shanghai
     username: root
     password: Root12345679!@#
 
