--- a/WinterRedServer/pom.xml
+++ b/WinterRedServer/pom.xml
@@ -102,6 +102,15 @@
             <artifactId>mail</artifactId>
             <version>1.4.7</version>
         </dependency>
+	<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
 
