前端报错修复

--- a/winterredfact-front/package.json
+++ b/winterredfact-front/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "sass-loader": "^9.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
