--- a/WinterRedServer/pom.xml
+++ b/WinterRedServer/pom.xml
@@ -102,7 +102,7 @@
             <artifactId>mail</artifactId>
             <version>1.4.7</version>
         </dependency>
-	<dependency>
+	    <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
@@ -110,6 +110,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <!--NLP-->
+        <dependency>
+            <groupId>com.hankcs</groupId>
+            <artifactId>hanlp</artifactId>
+            <version>portable-1.7.1</version>
         </dependency>
     </dependencies>
 
