新增前端对接获取邮箱验证码代码

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 *.log
 ./winterredfact-front/node_modules
 /winterredfact-front/package-lock.json
+/WinterRedServer/src/main/resources/identifyingCode.properties
