--- a/WinterRedServer/src/main/resources/application.yml
+++ b/WinterRedServer/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.113.113.225:3306/winter_red?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/winter_red?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&serverTimezone=Asia/Shanghai
     username: root
-    password: Root12345679!@#
+    password: xxxx
 
 
 mybatis-plus:
