前端实时数据展示

--- a/WinterRedServer/src/main/resources/identifyingCode.properties
+++ b/WinterRedServer/src/main/resources/identifyingCode.properties
@@ -1,5 +1,6 @@
 #propertiesDemo
-#Tue Jul 28 10:42:13 CST 2020
+#Sat Oct 31 14:14:25 CST 2020
+tianyu_tianyu1994@163.com=1511046
 223=433
 1254926326@qq.com=503682
 123=333
