完成专家注册页面

--- a/WinterRedServer/src/main/resources/identifyingCode.properties
+++ b/WinterRedServer/src/main/resources/identifyingCode.properties
@@ -1,6 +1,6 @@
 #propertiesDemo
-#Mon Nov 02 09:36:35 CST 2020
-2499901339@qq.com=671576
+#Mon Nov 02 10:28:41 CST 2020
+2499901339@qq.com=1175258
 tianyu_tianyu1994@163.com=1511046
 223=433
 1254926326@qq.com=503682
